style: :lipstick: Considerably lightend the framework
Cleaned up mismatched colors, and leaned up framework.

--- a/assets/fresh/partials/_colors.scss
+++ b/assets/fresh/partials/_colors.scss
@@ -72,8 +72,8 @@ $white-8: #D4D2CA;
 $white-9: #BDBCB4;
 
 $grey-yellow-0: #5A5B54;	// Main Complement grey */
-$grey-yellow-1: #787B65;
-$grey-yellow-2: #4C4D46;
+$grey-yellow-1: #323232;
+$grey-yellow-2: #444740;
 $grey-yellow-3: #3E4038;
 $grey-yellow-4: #2D2E28;
 
