--- a/assets/fresh/partials/_sections.scss
+++ b/assets/fresh/partials/_sections.scss
@@ -13,6 +13,9 @@ Section Styles
     &.section-secondary {
         background-color: $grey-red-2;
     }
+    &.section-frontdoor {
+        background-color: $blue-grey
+    }
     &.section-half {
         height: 75vh !important;
     }
