--- a/layouts/partials/hero-body.html
+++ b/layouts/partials/hero-body.html
@@ -7,12 +7,12 @@
 <div class="hero-body">
   <div class="container">
     <div class="columns is-vcentered">
-      <div class="column is-5 is-offset-1 landing-caption">
+      <div class="column is-6 landing-caption">
         <h1 class="title is-1 is-bold is-spaced">
           {{ $title }}
         </h1>
         {{ with $subtitle }}
-        <h2 class="subtitle is-5 is-muted">
+        <h2 class="subtitle is-4 is-muted">
           {{ . }}
         </h2>
         {{ end }}
@@ -22,8 +22,8 @@
           </a>
         </p>
       </div>
-      <div class="column is-5 is-offset-1">
-        <figure class="image is-4by3">
+      <div class="column is-6">
+        <figure class="image is-5by4">
           <img src="{{ printf "/images/%s" $image | relURL }}" alt="Description">
         </figure>
       </div>
