--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -2,8 +2,18 @@
 <!-- <script src="https://unpkg.com/feather-icons"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.1/feather.min.js" integrity="sha512-4lykFR6C2W55I60sYddEGjieC2fU79R7GUtaqr3DzmNbo0vSaO1MfUjMoTFYYuedjfEix6uV9jVTtRCSBU/Xiw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{{/*  <script defer data-domain="theytookourhome.com" src="https://plausible.io/js/script.js"></script>  */}}
 <script src="{{ "js/fresh.js" | relURL }}"></script>
 <script src="{{ "js/jquery.panelslider.min.js" | relURL }}"></script>
 <script src="{{ "js/lightbox.min.js" | relURL }}"></script>
-<script src="{{ "js/bulma-carosel.min.js" | relURL }}"></script>
+<script src="{{ "js/bulma-carousel.min.js" | relURL }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script type="application/javascript" src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+<script>
+var config = {
+  startOnLoad: true,
+  theme:'dark',
+  align:'center',
+};
+mermaid.initialize(config);
+</script>
