--- a/layouts/partials/section3.html
+++ b/layouts/partials/section3.html
@@ -2,7 +2,14 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
+        <div class="title-wrapper has-text-centered">
+          {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
+        </div>
+        <div class="divider is-centered"></div>
+      </div>
+    </div>  
+    <div class="columns">
+      <div class="column is-centered-tablet-portrait">
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
