--- a/layouts/partials/timeline.html
+++ b/layouts/partials/timeline.html
@@ -4,42 +4,42 @@
  This software is released under the MIT License.
  https://opensource.org/licenses/MIT
 -->
+{{- $file := . -}}
+{{- $years := $file.years -}}
 <section class="section is-medium" id="timeline">
     <div class="container">
-        <div class="title-wrapper has-text-centered">
-            {{ with .title }}<h2 class="title is-2">{{ . }}</h2>{{ end }}
-            {{ with .subtitle }}<h3 class="subtitle is-5 is-muted">{{ . }}</h3>{{ end }}
-            <div class="divider is-centered"></div>
+        <div class="columns">
+            <div class="column is-centered-tablet-portrait is-12">
+                <div class="title-wrapper has-text-centered">
+                    {{ with .title }}<h2 class="title is-2">{{ . }}</h2>{{ end }}
+                    {{ with .subtitle }}<h3 class="subtitle is-5 is-muted">{{ . }}</h3>{{ end }}
+                    <div class="divider is-centered"></div>
+                </div>
+            </div>
         </div>
-        <div class="content-wrapper">
-            <div class="timeline is-centered">
-                <header class="timeline-header">
-                    <span class="tag is-medium is-primary">Start</span>
-                </header>
-                {{ range .timeline }}
-                <div class="timeline-item">
-                    <div class="timeline-marker is-icon">
-                        <i class="{{ .icon }}"></i>
-                    </div>
-                    <div class="timeline-content">
-                        <p class="heading">
-                            {{ $t := time.AsTime .date }}
-                            {{ time.Format "2006-01-02" $t }}: {{ .title }}</p>
-                        <p>{{ .content }}</p>
+        {{- range $years}}
+        <div class="box">
+            <article class="media">
+                <div class="media-content">
+                    <div class="content-wrapper">
+                        <div class="mermaid" align="center">
+                            {{ .graph }}
+                        </div>
                     </div>
                 </div>
-                {{ end }}
-                <header class="timeline-header">
-                    <span class="tag is-medium is-primary">End</span>
-                </header>
+            </article>
+        </div>
+        {{- end }}
+        <div class="columns">
+            <div class="column is-centered-tablet-portrait is-12">
+                <p class="has-text-centered mt-20">
+                    {{ with .button }}
+                    <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
+                        {{ .content }}
+                    {{ end }}
+                    </a>
+                </p>
             </div>
-            <p class="has-text-centered mt-20">
-                {{ with .button }}
-                <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
-                    {{ .content }}
-                {{ end }}
-                </a>
-            </p>
         </div>
     </div>
 </section>
