feat: :sparkles: (Currently Broken) Taxonomical Configuration
Adding taxonomy to the theme via yaml data files.

Breaks site build. rm taxonomy template will allow build.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,14 @@
 {{ define "main" }}
 
+    {{/*  {{- $partial_data := partial . site.Data.({{.}}) -}}  */}}
+
     {{ if .Site.Params.hero }}
     {{ partial "hero.html" . }}
     {{ end }}
 
+    {{/*  {{ range .Site.Params.sections }}
+        {{ $partial_data . }}
+    {{ end }}  */}}
     {{/* <!-- first is the frontdoor --> */}}
     {{ partial "frontdoor" site.Data.frontdoor }}
     {{/* <!-- new foyer section --> */}}
